add donations react component

--- a/client/pagesHTML/members.html
+++ b/client/pagesHTML/members.html
@@ -11,7 +11,7 @@
 <body>
     <nav className="nav">
         <div>
-            <!-- <a href=".././index.html">HOME</a>   FIX THIS PATH -->
+            <a href="../../index.html">HOME</a>  
         </div>
     </nav>
     <h1>Donation</h1>
